# threedee

./: .gitignore  AGENTS.md  README.md  pyproject.toml  threedee.toml
.agents/: README.md  commands.md  handoff.md  project.md  setup.md
threedee/: cli.py  config.py  manifest.py  openrouter.py  pipeline.py
