[project]
name = "threedee"
version = "0.1.0"
description = "Personal prompt-to-rigged-3D asset pipeline CLI."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
threedee = "threedee.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["threedee"]
